--- a/public/css/style.css
+++ b/public/css/style.css
@@ -228,7 +228,6 @@ b, strong { font-weight: bold; }
 				background: #000; 
 				border-color: #111; 
 			}
-
 			button.black:hover,
 			.button.black:hover,
 			a.button.black:hover {
@@ -236,7 +235,22 @@ b, strong { font-weight: bold; }
 				background: #111;
 			}
 
+			button.fb,
+			.button.fb,
+			a.button.fb {
+				color: white;
+				background: #3B5998; 
+				border-color: #2f4779; 
+			}
+			button.fb:hover,
+			.button.fb:hover,
+			a.button.fb:hover {
+				color: white;
+				background: #2f4779;
+				border-color: #3B5998; 
+			}
 
+	
 
 	/* Forms */
 	form p,
