--- a/public/css/style.css
+++ b/public/css/style.css
@@ -202,6 +202,19 @@ b, strong { font-weight: bold; }
 			border-radius: 3px;
 		}
 
+		button.smaller,
+		.button.smaller,
+		a.button.smaller {
+			font-size: 12px;
+			line-height: 20px;
+			padding: 10px 18px;
+			-webkit-border-radius: 3px;
+			-moz-border-radius: 3px;
+			-ms-border-radius: 3px;
+			-o-border-radius: 3px;
+			border-radius: 3px;
+		}
+
 		button.full,
 		.button.full,
 		a.button.full {
@@ -604,8 +617,14 @@ b, strong { font-weight: bold; }
 		font-size: 12px;
 		line-height: 19px;
 	}
-
-
+	
+	#header p.header-links {
+		color: #ccc;
+		font-size: 12px;
+		line-height: 19px;
+		margin-top: 20px;
+		display: block;
+	}
 
 
 	/*---------------------------------------------------
