--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1347,17 +1347,23 @@ b, strong { font-weight: bold; }
 
 
 
-	.contact-warning {
+	div.contact-warning {
 			color: white;
 			background: #ee3a22;
 			padding: 20px 25px;
 			margin-bottom: 30px;
 	}
-	.contact-success {
+	div.contact-warning:empty {
+		display:none;
+	}
+	div.contact-success {
 			color: #22eedd;
 			background: #111;
 			padding: 20px 25px;
 			margin-bottom: 30px;
+	}
+	div.contact-success:empty {
+		display:none;
 	}
 
 	/*---------------------------------------------------
